fixed not showing selection

--- a/client/default/css/style.css
+++ b/client/default/css/style.css
@@ -71,14 +71,14 @@
 	padding: 6px 8px 10px 8px !important;
 	width: 50%;
 }
-.feed-list > div {
+.feed-list > div > div {
 	padding: 6px 4px 6px 3px;
 	border-radius: none !important;
 	border: none;
 	border-bottom: 1px solid #B4B4B4;
 	border-top: 1px solid #F8F8F8;
 }
-.feed-list > div.active {
+.feed-list > div > div.active {
 	background-color: #aaa;
 }
 .loading-overlay {
